Update Gas fees and Success Anthony.adoc
I added a Tweet link to My Twitter thread on the topic Degen as instructed.

--- a/Gas fees and Success Anthony.adoc
+++ b/Gas fees and Success Anthony.adoc
@@ -1,3 +1,7 @@
+Tweet Link for.. Write a thread on Degen
+https://x.com/KryptoSenora/status/1943400175889977606?t=MZDfsuAONTmVa3Uf2OmTdA&s=19
+
+
 Tweet link 
 https://x.com/KryptoSenora/status/1941679127972499823?t=Gl0JNO_jREjQMqoxUdtV0A&s=19
 
